kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-stats-app-ingress
  namespace: devops-test-gke
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ivaylomydevopstask.com  # Replace with your domain or external IP
    http:
      paths:
      - path: /stats
        pathType: Prefix
        backend:
          service:
            name: get
            port:
              number: 80
